--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,9 @@
 theme: jekyll-theme-cayman
 timezone: Asia/Shanghai
+
+url: http://vincenttam.github.io
+title: Blog
+author: lscpku
+simple_search: https://google.com/search
+description:
+date_format: "ordinal"
